# real-time-chat-system

./: .gitignore  DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  README.md  render.yaml
.kiro/specs/realtime-chat-server/: design.md  requirements.md  tasks.md
backend/: .dockerignore  .env.example  Dockerfile  QUICK_START.md  README.md  TESTING_GUIDE.md  add_admin_column.py  alembic.ini  make_user_admin.py  manage_db.py  nixpacks.toml  postman_collection.json  pyproject.toml  render.yaml  requirements.txt  start.sh  test_api.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_is_admin_column.py
backend/app/: main.py
backend/app/admin/: __init__.py  admin_panel.py
backend/app/api/v1/: admin.py  admin_views.py  api.py
backend/app/auth/: dependencies.py  password_reset_service.py  routes.py  schemas.py  views.py
backend/app/chat/: routes.py  schemas.py  views.py  websocket.py  ws_routes.py
backend/app/core/: config.py  email.py  security.py
backend/app/database/: init_db.py  redis_client.py
backend/app/models/: __init__.py  chat.py  password_reset.py  user.py
backend/docs/: ADMIN_PANEL.md  API_TESTING_SUMMARY.md  ARCHITECTURE.md  CLASS_BASED_VIEWS.md  IMPLEMENTATION_COMPLETE.md
backend/tests/: conftest.py  test_auth.py  test_chat_api.py  test_chat_models.py  test_websocket.py
docs/: CLEANUP_COMPLETE.md  CLEANUP_GUIDE.md  FREE_DEPLOYMENT_GUIDE.md  PROJECT_FINAL_STATUS.md  QUICK_START_UPDATED.md  README.md
frontend/: .env.example  main.py  package-lock.json
frontend/src/: App.tsx  index.css  index.tsx  setupTests.ts
(+26 files in other folders)
