[project]
name = "punch-trial-project-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Oladimeji Balogun",email = "boladimeji834@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
