[project]
name = "realtime-chat-server"
version = "0.1.0"
description = "A realtime chat server built with FastAPI"
authors = [
    {name = "Oladimeji Balogun",email = "boladimeji834@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi[all] (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg2-binary (>=2.9.0,<3.0.0)",
    "redis (>=5.0.0,<6.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.0,<2.0.0)",
    "python-multipart (>=0.0.6,<1.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "streamlit (>=1.28.0,<2.0.0)",
    "websockets (>=12.0,<13.0)",
    "pydantic[email] (>=2.0.0,<3.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
